--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/firlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/firlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineFIR">
+        <activity android:name=".ForgotPassword" />
         <activity android:name=".DisplayComplainActivity" />
         <activity android:name=".ShowStatusActivity" />
-        <activity android:name=".StatusActivity"
+        <activity
+            android:name=".StatusActivity"
             tools:ignore="Instantiatable" />
 
         <meta-data
@@ -32,6 +34,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
