--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:icon="@mipmap/firlogo"
@@ -12,27 +14,20 @@
         android:roundIcon="@mipmap/firlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineFIR">
-        <activity android:name=".DisplayIdActivity"></activity>
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".complainStatus.MyComplainActivity"
+            tools:ignore="Instantiatable" />
         <activity android:name=".admin.ViewComplainActivity" />
         <activity android:name=".admin.AddAdminActivity" />
         <activity android:name=".admin.AdminLoginActivity" />
         <activity android:name=".ForgotPassword" />
         <activity android:name=".DisplayComplainActivity" />
-        <activity android:name=".ShowStatusActivity" />
-        <activity
-            android:name=".StatusActivity"
-            tools:ignore="Instantiatable" />
 
         <meta-data
             android:name="android.webkit.WebView.EnableSafeBrowsing"
             android:value="false" />
 
-        <activity android:name=".LayoutManagerActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".LayoutManagerActivity" />
         <activity
             android:name=".ComplainActivity"
             tools:ignore="Instantiatable" />
@@ -41,7 +36,11 @@
             tools:ignore="Instantiatable" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
