--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:icon="@mipmap/firlogo"
@@ -14,8 +12,10 @@
         android:roundIcon="@mipmap/firlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineFIR">
+        <activity android:name=".complainStatus.DisplayInListActivity"></activity>
         <activity android:name=".DetailActivity" />
-        <activity android:name=".complainStatus.MyComplainActivity"
+        <activity
+            android:name=".complainStatus.MyComplainActivity"
             tools:ignore="Instantiatable" />
         <activity android:name=".admin.ViewComplainActivity" />
         <activity android:name=".admin.AddAdminActivity" />
